# ChangeLog for media-gfx/exiv2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiv2/ChangeLog,v 1.81 2010/01/24 13:09:20 swegener Exp $

  24 Jan 2010; Sven Wegener <swegener@gentoo.org> exiv2-0.19.ebuild,
  +files/exiv2-0.19-syntax-fix.patch:
  Include a syntax fix from upstream, bug #302026.

*exiv2-0.19 (23 Jan 2010)

  23 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +exiv2-0.19.ebuild:
  Version bump (bug #283626).

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> exiv2-0.18.1.ebuild:
  arm/ia64/s390/sh stable wrt #273577

  19 Jul 2009; nixnut <nixnut@gentoo.org> exiv2-0.18.1.ebuild:
  ppc stable #273577

  29 Jun 2009; Brent Baude <ranger@gentoo.org> exiv2-0.18.1.ebuild:
  Marking exiv2-0.18.1 ppc64 for bug 273577

  15 Jun 2009; Tobias Klausmann <klausman@gentoo.org> exiv2-0.18.1.ebuild:
  Stable on alpha, bug #273577

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> exiv2-0.18.1.ebuild:
  Stable for HPPA (bug #273577).

  15 Jun 2009; Peter Volkov <pva@gentoo.org> exiv2-0.18.1.ebuild:
  amd64 stable, bug #273577

  11 Jun 2009; Stefan Briesenick <sbriesen@gentoo.org>
  exiv2-0.18.1-r1.ebuild:
  restored LINGUAS handling

  11 Jun 2009; Ferris McCormick <fmccor@gentoo.org> exiv2-0.18.1.ebuild:
  Sparc stable, fast stable for Bug #273577.

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org> exiv2-0.18.1.ebuild:
  stable x86, bug 273577

*exiv2-0.18.1-r1 (11 Jun 2009)

  11 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org> exiv2-0.18.1.ebuild,
  +exiv2-0.18.1-r1.ebuild:
  Revision bump for stripping out the new boost dep, so package can be
  fast-stabled. Per bug #273577.

  26 May 2009; Gordon Malm <gengor@gentoo.org> exiv2-0.18.ebuild,
  exiv2-0.18.1.ebuild:
  Fix compile on amd64 utilizing gcc-3.4. Bug #78720.

  23 May 2009; Markus Meier <maekke@gentoo.org> exiv2-0.18.ebuild:
  amd64/x86 stable, bug #262843
