@@ -5,6 +5,6 @@ DIST exiv2-0.19.tar.gz 2658781 RMD160 263267fb75341a6eb60e5201b88bfea11ef18eea S
 EBUILD exiv2-0.17.1.ebuild 2177 RMD160 05aa269252bf5ac2b778207e40cdb4f585d8299e SHA1 ac40e4ebf8abae248a6c647f6b00a923ad71e8f0 SHA256 2390975550fe21ad23c74349b16d5fa8a1f14505a5d28f55fda2968336936fdb
 EBUILD exiv2-0.18.1-r1.ebuild 3042 RMD160 1b11fb513c2c824608416dcee69459cd93342b45 SHA1 5405b7ab7c930746fa91d4b97c465489db8829c0 SHA256 d51dd16807ce12f2a07d694a127d15896597e5b37b34cec5f9a77f1857d02ab9
 EBUILD exiv2-0.18.1.ebuild 2444 RMD160 e88b7fb59964f1e77ad7d2b54d278b3d0015c544 SHA1 effcb4e9b6d2afb7172cd975c13381379e070985 SHA256 8fef42a8c59b53b4b45aea75ec8ce0ba23121a741bff14cd529310438215bf4b
-EBUILD exiv2-0.19.ebuild 3089 RMD160 f0b8902d53db4b7dcf28b71927ea31b6e6cab1d7 SHA1 16d2cb34f24db1ff7757462037cad00c25ba5383 SHA256 02fa0031e275cb43d98b033997ee5c75f2763719f0aaa7d8fa795d86f7d701e0
-MISC ChangeLog 9945 RMD160 da1a8cf58f771f0c270b62f71300ab141c3f20f3 SHA1 17258370d3cf47f992fbabfea0d9520fdd3059fa SHA256 68acada5d3339201ea7fdf539614c7d754065ccc65b5026167587c3cfc1f9dfb
-MISC metadata.xml 559 RMD160 890ebf01e124351efae52ad34e0ff18228471c05 SHA1 700480aad5487da86b0669c42e7e64626e50bbe9 SHA256 8200a4e1207be507c8eeb097cc269c761b4758e70707f8c84d309802f8840634
+EBUILD exiv2-0.19.ebuild 3084 RMD160 c438ec1e409e220c78a947d15a84bb410dedd4c1 SHA1 a4d9cb52083593739bd77faa693c567dcdcf4520 SHA256 e447ab82e8be15431b0bdf7db12378be350def4ef779a9d1643b52d15afc5847
+MISC ChangeLog 10140 RMD160 f4b122cc3c521681833e13931192afebd8aa25e3 SHA1 efc9ea980a26cd78bcb2a29a30fe3394835557f1 SHA256 5c9a689968e26943c6a4db38edcaf0f920e239d92bf3edf007dbd418aa4601be
+MISC metadata.xml 499 RMD160 977e5210d3b213c9c743a476d77737af81ca805a SHA1 1784af211aba78b938559b591cd6d6d3bae0427f SHA256 d536220947772cba94e4d08e8da8139987413ded44f779e62165ea308bffb5ff
